--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+*{
+	margin: 0;
+	padding: 0;
+}
 #loading-status{
 	width: 300px;
 	border: 1px #669cb8 solid;
@@ -13,4 +17,19 @@
 	height: 100%;
 	-webkit-border-radius: 10px;
 	-webkit-transition: width 1s ease-in-out;
+}
+#pic{
+	margin: 0 auto;
+	height: 60px;
+	width: 60px;
+}
+#pic img{
+	height: 60px;
+	width: 60px;
+}
+.time{
+	position: relative;
+	height: 30px;
+	background: #42A9FF;
+	display: inline-block;
 }
