--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,10 @@
 	margin: 0;
 	padding: 0;
 }
-#loading-status{
+#time{
+	font-size: 0px;
+}
+.loading-status{
 	width: 300px;
 	border: 1px #669cb8 solid;
 	-webkit-box-shadow: 0px 2px 2px #d0d4d6;
@@ -10,8 +13,13 @@
 	-webkit-border-radius: 10px;
 	background: -webkit-gradient(linear,0 0,0 100%,from(#e1e9ee),to(white));
 	padding: 1px;
+	display: inline-block;
+	font-size: initial;
 }
-#process{
+.tip{
+	position: absolute;
+}
+.process{
 	background: -webkit-gradient(linear, 0 0 ,0 100% ,from(#7bc3ff),color-stop(0.5,#42a9ff),to(#7bc3ff));
 	width: 100%;
 	height: 100%;
